--- a/src/components/AddFriendInput.css
+++ b/src/components/AddFriendInput.css
@@ -1,6 +1,6 @@
 :local(.addFriendInput) {
   border-radius: 0;
-  border-color: #ABAAAA;
+  border-color: #abaaaa;
   border-left: 0;
   border-right: 0;
 }
