--- a/src/components/FriendListItem.css
+++ b/src/components/FriendListItem.css
@@ -2,7 +2,7 @@
   list-style: none;
   padding: 20px 10px 20px 20px;
   background-color: white;
-  border-bottom: 1px solid #E3E3E3;
+  border-bottom: 1px solid #e3e3e3;
   display: flex;
 }
 
@@ -18,9 +18,12 @@
   flex: 0 0 90px;
 }
 
-:local(.btnAction), :local(.btnAction):active, :local(.btnAction):focus, :local(.btnAction):hover {
+:local(.btnAction),
+:local(.btnAction):active,
+:local(.btnAction):focus,
+:local(.btnAction):hover {
   margin-right: 5px;
-  color: #5C75B0;
+  color: #5c75b0;
 }
 
 button:focus {
