--- a/src/containers/FriendListApp.css
+++ b/src/containers/FriendListApp.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F4F3F0;
+  background-color: #f4f3f0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,8 +8,8 @@ body {
 :local(.friendListApp) {
   width: 300px;
   padding-top: 18px;
-  background-color: #5C75B0;
-  border: 1px solid #E3E3E3;
+  background-color: #5c75b0;
+  border: 1px solid #e3e3e3;
 }
 
 :local(.friendListApp h1) {
